--- a/application.properties
+++ b/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=5232
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+eureka.instance.hostname=localhost
